Revision history for Compression-Util

0.14    2024-??-??

        [ADDITIONS]

        - Added the `adler32()` checksum function.

0.13    2024-08-25

        [IMPROVEMENTS]

        - More Gzip flags are now recognized.
        - Better compression ratio in bzip2_compress().

        [BUG-FIXES]

        - Fixed the extraction of Gzip data that contains a comment.
        - Fixed a potential CRC32 issue in bzip2_compress() when data gets expanded.

0.12    2024-08-23

        [ADDITIONS]

        - Added the `lz4_compress()` and `lz4_decompress()`  functions.

        [IMPROVEMENTS]

        - Slightly better performance in `mtf_encode()`.
        - Replaced all "die" statements, with Carp::confess(), for better debugging.

        [BUG-FIXES]

        - Allow `$LZ77_MIN_LEN` to be set by the user to a value greater than 4, before calling `gzip_compress()`.

0.11    2024-08-22

        [ADDITIONS]

        - Added the `crc32()` function.
        - Added the `int2bytes()` and `int2bytes_lsb()` functions.
        - Added the `bzip2_compress()` and `bzip2_decompress()` functions.
        - Added the `gzip_compress()` and `gzip_decompress()` functions.
        - Added the `encode_alphabet_256()` and `decode_alphabet_256()` functions.

        [IMPROVEMENTS]

        - Minor documentation improvements.
        - Slightly more efficient encoding of the alphabet, in function `encode_alphabet()`.

        [CHANGES]

        - Changed the default value of `$Compression::Util::LZ_MAX_LEN` from 258 to 32768. For some inputs, this results in better compression at no additional costs.

0.10    2024-08-07

        [ADDITIONS]

        - Added the `mrl_compress()` and `mrl_decompress()` functions, for compressing/decompressing strings.
        - Added the `bytes2int()` and `bytes2int_lsb()` functions.

        [CHANGES]

        - Changed the order of values returned by `lz77_encode()`.
        - Changed the order of arguments accepted by `lz77_decode()`.

        [FIXES]
